syntax = "proto3";
package publicawesome.stargaze.claim.v1beta1;

// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "stargaze/claim/v1beta1/claim_record.proto";
import "stargaze/claim/v1beta1/params.proto";

option go_package = "github.com/public-awesome/stargaze/v12/x/claim/types";

// GenesisState defines the claim module's genesis state.
message GenesisState {
  // this line is used by starport scaffolding # genesis/proto/state
  // balance of the claim module's account
  cosmos.base.v1beta1.Coin module_account_balance = 1 [
    (gogoproto.moretags) = "yaml:\"module_account_balance\"",
    (gogoproto.nullable) = false
  ];

  // params defines all the parameters of the module.
  Params params = 2 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];

  // list of claim records, one for every airdrop recipient
  repeated ClaimRecord claim_records = 3 [
    (gogoproto.moretags) = "yaml:\"claim_records\"",
    (gogoproto.nullable) = false
  ];
}
